added delete API in agencies
