# src/routes/agency.route.ts
@@ -15,6 +15,7 @@ export class AgencyRoute implements Routes {
 
   private initializeRoutes() {
     this.router.post(`${this.path}/:id`, ValidationMiddleware(CreateAgencyDto, true), this.agency.createAgency);
+    this.router.delete(`${this.path}/delete-agency/:agencyId`, this.agency.deleteAgency);
     this.router.get(`${this.path}`, this.agency.getAgency);
   }
 }
